Remove blog methods in favor of methods on the BlogArticle, and add method docs

--- a/fixtures/preview-app/source/_article_template.erb
+++ b/fixtures/preview-app/source/_article_template.erb
@@ -1,7 +1,7 @@
 <article class="hentry">
   <h1 class="entry-title">
-    <%= current_article_title %> 
-    <time class="updated" pubdate><%= current_article_date.strftime('%b %e %Y') %></time>
+    <%= current_article.title %> 
+    <time class="updated"><%= current_article.date.strftime('%b %e %Y') %></time>
   </h1>
   
   <div class="entry-content">
