--- a/fixtures/indexes-app/source/index.html.erb
+++ b/fixtures/indexes-app/source/index.html.erb
@@ -1,4 +1,4 @@
-<% data.blog.articles[0...5].each_with_index do |article, i| %>
+<% blog.articles[0...5].each_with_index do |article, i| %>
   <article class="<%= (i == 0) ? 'first' : '' %>">
     <h1><a href="<%= article.url %>"><%= article.title %></a> <span><%= article.date.strftime('%b %e %Y') %></span></h1>
     
