--- a/fixtures/preview-app/source/layout.erb
+++ b/fixtures/preview-app/source/layout.erb
@@ -5,7 +5,7 @@
     <meta http-equiv='X-UA-Compatible' content='IE=edge;chrome=1' />
     
     <% if is_blog_article? %>
-      <title><%= current_article_title %></title>
+      <title><%= current_article.title %></title>
     <% end %>
   </head>
   <body>
