Remove blog_layout_engine (unnecessary) and blog_index_template/blog_article_template (unused). blog_article_template can be replaced with use of normal partials or nested layouts.

--- a/fixtures/indexes-app/source/layout.erb
+++ b/fixtures/indexes-app/source/layout.erb
@@ -5,7 +5,7 @@
   <body>
     <% if is_blog_article? %>
       <% content_for :blog_article, yield %>
-      <%= partial settings.blog_article_template %>
+      <%= partial 'article_template' %>
     <% else %>
       <%= yield %>
     <% end %>
