--- a/fixtures/preview-app/source/layout.erb
+++ b/fixtures/preview-app/source/layout.erb
@@ -13,7 +13,7 @@
     <div id="main" role="main">
       <% if is_blog_article? %>
         <% content_for :blog_article, yield %>
-        <%= partial settings.blog_article_template %>
+        <%= partial 'article_template' %>
       <% else %>
         <%= yield %>
       <% end %>
