--- a/lib/middleman-blog/template/config.tt
+++ b/lib/middleman-blog/template/config.tt
@@ -1,9 +1,94 @@
+###
+# Blog settings
+###
+
 activate :blog
+
 # set :blog_permalink, ":year/:month/:day/:title.html"
-# set :blog_summary_separator, /READMORE/
-# set :blog_summary_length, 500
+# set :blog_sources, ":year-:month-:day-:title.html"
+# set :blog_taglink, "tags/:tag.html"
+# set :blog_layout, "layout"
+# set :blog_summary_separator, /(READMORE)/
+# set :blog_summary_length, 250
+# set :blog_year_link, ":year.html"
+# set :blog_month_link, ":year/:month.html"
+# set :blog_day_link, ":year/:month/:day.html"
+# set :blog_default_extension, ".markdown"
+
+set :blog_tag_template, "tag.html"
+set :blog_calendar_template, "calendar.html"
 
 page "/feed.xml", :layout => false
+
+### 
+# Compass
+###
+
+# Susy grids in Compass
+# First: gem install compass-susy-plugin
+# require 'susy'
+
+# Change Compass configuration
+# compass_config do |config|
+#   config.output_style = :compact
+# end
+
+###
+# Page options, layouts, aliases and proxies
+###
+
+# Per-page layout changes:
+# 
+# With no layout
+# page "/path/to/file.html", :layout => false
+# 
+# With alternative layout
+# page "/path/to/file.html", :layout => :otherlayout
+# 
+# A path which all have the same layout
+# with_layout :admin do
+#   page "/admin/*"
+# end
+
+# Proxy (fake) files
+# page "/this-page-has-no-template.html", :proxy => "/template-file.html" do
+#   @which_fake_page = "Rendering a fake page with a variable"
+# end
+
+###
+# Helpers
+###
+
+# Automatic image dimensions on image_tag helper
+# activate :automatic_image_sizes
+
+# Methods defined in the helpers block are available in templates
+# helpers do
+#   def some_helper
+#     "Helping"
+#   end
+# end
+
+<% if options[:css_dir] -%>
+set :css_dir, '<%= options[:css_dir] -%>'
+<% else -%>
+# Change the CSS directory
+# set :css_dir, "alternative_css_directory"
+<% end -%>
+
+<% if options[:js_dir] -%>
+set :js_dir, '<%= options[:js_dir] -%>'
+<% else -%>
+# Change the JS directory
+# set :js_dir, "alternative_js_directory"
+<% end -%>
+
+<% if options[:images_dir] -%>
+set :images_dir, '<%= options[:images_dir] -%>'
+<% else -%>
+# Change the images directory
+# set :images_dir, "alternative_image_directory"
+<% end -%>
 
 # Build-specific configuration
 configure :build do
@@ -15,4 +100,15 @@ configure :build do
   
   # Enable cache buster
   # activate :cache_buster
+  
+  # Use relative URLs
+  # activate :relative_assets
+  
+  # Compress PNGs after build
+  # First: gem install middleman-smusher
+  # require "middleman-smusher"
+  # activate :smusher
+  
+  # Or use a different image path
+  # set :http_path, "/Content/images/"
 end
