--- a/lib/middleman-blog/template/source/index.html.erb
+++ b/lib/middleman-blog/template/source/index.html.erb
@@ -1,9 +1,8 @@
-<% data.blog.articles[0...5].each_with_index do |article, i| %>
-  <article class="<%= (i == 0) ? 'first' : '' %>">
-    <h1><a href="<%= article.url %>"><%= article.title %></a> <span><%= article.date.strftime('%b %e %Y') %></span></h1>
-    
-    <%= article.summary %>
-    
-    <div class="more"><a href="<%= article.url %>">read on &raquo;</a></div>
-  </article>
-<% end %>
+<ul>
+  <% blog.articles[0...10].each do |article| %>
+  <li>
+    <h2><a href="<%= article.url %>"><%= article.title %></a> <span><%= article.date.strftime('%b %e') %></span></h2>
+    <p><%= article.summary %></p>
+  </li>
+  <% end %>
+</ul>
