Rely on middleman-core only

--- a/fixtures/indexes-app/source/layout.erb
+++ b/fixtures/indexes-app/source/layout.erb
@@ -4,8 +4,7 @@
   </head>
   <body>
     <% if is_blog_article? %>
-      <% content_for :blog_article, yield %>
-      <%= partial 'article_template' %>
+      <%= current_article.url %>
     <% else %>
       <%= yield %>
     <% end %>
