Add "builder" to generated Gemfile. Fixes #51.

--- a/lib/middleman-blog/template/shared/Gemfile.tt
+++ b/lib/middleman-blog/template/shared/Gemfile.tt
@@ -2,3 +2,6 @@ source :rubygems
 
 gem "middleman", "~> <%= Middleman::VERSION %>"
 gem "middleman-blog", "~> <%= Middleman::Blog::VERSION %>"
+
+# For feed.xml.builder
+gem "builder", "~> 3.0.0"
