Added pagination extension.
Setting blog.paginate = true will enable the pagination extension. Any
template with "pageable: true" in the frontmatter will get pagination
support. The blog.per_page option can be used to set the number of items
per page, and the blog.page_link option can be used to customise the URL
of the generated page files. These options can also be set in the
template frontmatter.

--- a/lib/middleman-blog/template/source/calendar.html.erb
+++ b/lib/middleman-blog/template/source/calendar.html.erb
@@ -1,3 +1,6 @@
+---
+pageable: true
+---
 <h1>Archive for
   <% if day %>
     <%= Date.new(year, month, day).strftime('%b %e %Y') %>
@@ -8,8 +11,22 @@
   <% end %>
 </h1>
 
+<% if paginate %>
+  <p>Page <%= page_number %> of <%= num_pages %></p>
+
+  <% if prev_page %>
+    <p><a href="<%= prev_page %>">Previous page</a></p>
+  <% end %>
+<% end %>
+
 <ul>
-  <% articles.each_with_index do |article, i| %>
-  <li><a href="<%= article.url %>"><%= article.title %></a> <span><%= article.date.strftime('%b %e') %></span></li>
-   <% end %>
+  <% articles[page_start..page_end].each_with_index do |article, i| %>
+    <li><a href="<%= article.url %>"><%= article.title %></a> <span><%= article.date.strftime('%b %e') %></span></li>
+  <% end %>
 </ul>
+
+<% if paginate %>
+  <% if next_page %>
+    <p><a href="<%= next_page %>">Next page</a></p>
+  <% end %>
+<% end %>
