--- a/lib/middleman-blog/template/config.tt
+++ b/lib/middleman-blog/template/config.tt
@@ -16,6 +16,10 @@ activate :blog do |blog|
 
   blog.tag_template = "tag.html"
   blog.calendar_template = "calendar.html"
+
+  # blog.paginate = true
+  # blog.per_page = 10
+  # blog.page_link = "page/:num"
 end
 
 page "/feed.xml", :layout => false
