--- a/lib/middleman-blog/template/source/calendar.html.erb
+++ b/lib/middleman-blog/template/source/calendar.html.erb
@@ -2,9 +2,9 @@
 pageable: true
 ---
 <h1>Archive for
-  <% if day %>
+  <% if defined?(day) %>
     <%= Date.new(year, month, day).strftime('%b %e %Y') %>
-  <% elsif month %>
+  <% elsif defined?(month) %>
     <%= Date.new(year, month, 1).strftime('%b %Y') %>
   <% else %>
     <%= year %>
