--- a/lib/middleman-blog/template/source/index.html.erb
+++ b/lib/middleman-blog/template/source/index.html.erb
@@ -10,7 +10,7 @@ per_page: 10
   <% end %>
 <% end %>
 
-<% articles[page_start..page_end].each_with_index do |article, i| %>
+<% page_articles.each_with_index do |article, i| %>
   <h2><a href="<%= article.url %>"><%= article.title %></a> <span><%= article.date.strftime('%b %e') %></span></h2>
   <p><%= article.summary %></p>
 <% end %>
