--- a/lib/middleman-blog/template/source/tag.html.erb
+++ b/lib/middleman-blog/template/source/tag.html.erb
@@ -13,7 +13,7 @@ per_page: 12
 <% end %>
 
 <ul>
-  <% articles[page_start..page_end].each_with_index do |article, i| %>
+  <% page_articles.each_with_index do |article, i| %>
     <li><a href="<%= article.url %>"><%= article.title %></a> <span><%= article.date.strftime('%b %e') %></span></li>
   <% end %>
 </ul>
