--- a/lib/middleman-blog/template/source/index.html.erb
+++ b/lib/middleman-blog/template/source/index.html.erb
@@ -6,7 +6,7 @@ per_page: 10
   <p>Page <%= page_number %> of <%= num_pages %></p>
 
   <% if prev_page %>
-    <p><a href="<%= prev_page %>">Previous page</a></p>
+    <p><a href="<%= prev_page.url %>">Previous page</a></p>
   <% end %>
 <% end %>
 
@@ -17,6 +17,6 @@ per_page: 10
 
 <% if paginate %>
   <% if next_page %>
-    <p><a href="<%= next_page %>">Next page</a></p>
+    <p><a href="<%= next_page.url %>">Next page</a></p>
   <% end %>
 <% end %>
