--- a/fixtures/tags-app/source/index.html.erb
+++ b/fixtures/tags-app/source/index.html.erb
@@ -1,3 +1,5 @@
  <% blog.articles[0...12].each do |article| %>
       <li><a href="<%= article.url %>"><%= article.title %></a> <time><%= article.date.strftime('%b %e') %></time></li>
     <% end %>
+
+Tag Path: '<%= tag_path("foo") %>'
