--- a/lib/middleman-blog/template/source/index.html.erb
+++ b/lib/middleman-blog/template/source/index.html.erb
@@ -6,17 +6,17 @@ per_page: 10
   <p>Page <%= page_number %> of <%= num_pages %></p>
 
   <% if prev_page %>
-    <p><a href="<%= prev_page.url %>">Previous page</a></p>
+    <p><%= link_to 'Previous page', prev_page %></p>
   <% end %>
 <% end %>
 
 <% page_articles.each_with_index do |article, i| %>
-  <h2><a href="<%= article.url %>"><%= article.title %></a> <span><%= article.date.strftime('%b %e') %></span></h2>
+  <h2><%= link_to article.title, article %> <span><%= article.date.strftime('%b %e') %></span></h2>
   <p><%= article.summary %></p>
 <% end %>
 
 <% if paginate %>
   <% if next_page %>
-    <p><a href="<%= next_page.url %>">Next page</a></p>
+    <p><%= link_to 'Next page', next_page %></p>
   <% end %>
 <% end %>
