--- a/lib/middleman-blog/template/source/tag.html.erb
+++ b/lib/middleman-blog/template/source/tag.html.erb
@@ -8,18 +8,18 @@ per_page: 12
   <p>Page <%= page_number %> of <%= num_pages %></p>
 
   <% if prev_page %>
-    <p><a href="<%= prev_page.url %>">Previous page</a></p>
+    <p><%= link_to 'Previous page', prev_page %></p>
   <% end %>
 <% end %>
 
 <ul>
   <% page_articles.each_with_index do |article, i| %>
-    <li><a href="<%= article.url %>"><%= article.title %></a> <span><%= article.date.strftime('%b %e') %></span></li>
+    <li><%= link_to article.title, article %> <span><%= article.date.strftime('%b %e') %></span></li>
   <% end %>
 </ul>
 
 <% if paginate %>
   <% if next_page %>
-    <p><a href="<%= next_page.url %>">Next page</a></p>
+    <p><%= link_to 'Next page', next_page %></p>
   <% end %>
 <% end %>
