Add page_type variable for calendar and tag pages
Because undefined local variables throw exceptions instead of returning
nil like instance variables, add a 'page_type' variable to tell the
different types of archive pages apart. Use 'tagname' in place of '@tag'
because a 'tag' local will clash with Padrino's tag helper.

--- a/fixtures/paginate-app/source/tag.html.erb
+++ b/fixtures/paginate-app/source/tag.html.erb
@@ -2,7 +2,7 @@
 pageable: true
 per_page: 2
 ---
-Tag: <%= tag %>
+Tag: <%= tagname %>
 
 Paginate: <%= paginate %>
 Article Count: <%= page_articles.size %>
