--- a/lib/middleman-blog/template/source/tag.html.erb
+++ b/lib/middleman-blog/template/source/tag.html.erb
@@ -2,7 +2,7 @@
 pageable: true
 per_page: 12
 ---
-<h1>Articles tagged '<%= tag %>'</h1>
+<h1>Articles tagged '<%= tagname %>'</h1>
 
 <% if paginate %>
   <p>Page <%= page_number %> of <%= num_pages %></p>
