--- a/fixtures/calendar-and-tag-app/source/archive.html.erb
+++ b/fixtures/calendar-and-tag-app/source/archive.html.erb
@@ -1,6 +1,10 @@
+<% if page_type == 'tag' %>
+Tag: '<%= tagname %>'
+<% else %>
 Year: '<%= year %>'
 Month: '<%= month %>'
 Day: '<%= day %>'
+<% end %>
 
 <% articles[0...5].each_with_index do |article, i| %>
   <article class="<%= (i == 0) ? 'first' : '' %>">
