--- a/fixtures/calendar-and-tag-app/source/archive.html.erb
+++ b/fixtures/calendar-and-tag-app/source/archive.html.erb
@@ -2,8 +2,8 @@
 Tag: '<%= tagname %>'
 <% else %>
 Year: '<%= year %>'
-Month: '<%= month %>'
-Day: '<%= day %>'
+Month: '<%= month if page_type == "month" or page_type == "day"%>'
+Day: '<%= day if page_type == "day" %>'
 <% end %>
 
 <% articles[0...5].each_with_index do |article, i| %>
