--- a/fixtures/calendar-app/source/calendar.html.erb
+++ b/fixtures/calendar-app/source/calendar.html.erb
@@ -1,6 +1,6 @@
 Year: '<%= year %>'
-Month: '<%= month %>'
-Day: '<%= day %>'
+Month: '<%= month if page_type == "month" or page_type == "day" %>'
+Day: '<%= day if page_type == "day" %>'
 
 <% articles[0...5].each_with_index do |article, i| %>
   <article class="<%= (i == 0) ? 'first' : '' %>">
