--- a/lib/middleman-blog/template/config.tt
+++ b/lib/middleman-blog/template/config.tt
@@ -2,6 +2,8 @@
 # Blog settings
 ###
 
+# Time.zone = "UTC"
+
 activate :blog do |blog|
   # blog.prefix = "blog"
   # blog.permalink = ":year/:month/:day/:title.html"
