--- a/fixtures/summary-app/source/index.html.erb
+++ b/fixtures/summary-app/source/index.html.erb
@@ -1,7 +1,5 @@
-<% blog.articles[0...5].each_with_index do |article, i| %>
+<% blog.articles.each do |article| %>
   <article>
-    <h1><a href="<%= article.url %>"><%= article.title %></a> <span><%= article.date.strftime('%b %e %Y') %></span></h1>
-    <summary><%= article.summary %></summary>
-    <div class="more"><a href="<%= article.url %>">read on &raquo;</a></div>
+    <%= article.summary %>
   </article>
 <% end %>
