--- a/lib/middleman-blog/template/source/index.html.erb
+++ b/lib/middleman-blog/template/source/index.html.erb
@@ -14,6 +14,9 @@ per_page: 10
   <h2><%= link_to article.title, article %> <span><%= article.date.strftime('%b %e') %></span></h2>
   <!-- use article.summary(250) if you have Nokogiri available to show just
        the first 250 characters -->
+  <% unless article.author.to_s.empty? %>
+    <h3>Author: <%= article.author %></h3>
+  <% end %>
   <%= article.body %>
 <% end %>
 
