--- a/lib/middleman-blog/template/source/layout.erb
+++ b/lib/middleman-blog/template/source/layout.erb
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv='X-UA-Compatible' content='IE=edge;chrome=1' />
+    <title>Blog Title<%= ' - ' + current_article.title unless current_article.nil? %></title>
   </head>
   <body>
     
