Write extra information from the 'sources' URL template back into the article's metadata. It can be retrieved via 'current_article.metadata[:page][<key>]'. This allows tokens from 'sources' to be used in 'permalink'.

--- a/fixtures/permalink-data-app/source/layout.erb
+++ b/fixtures/permalink-data-app/source/layout.erb
@@ -4,7 +4,8 @@
   </head>
   <body>
     <% if is_blog_article? %>
-      <%= current_article.url %>
+      URL: <%= current_article.url %>
+      Category: <%= current_article.metadata[:page]['category'] %>
       <%= yield %>
     <% else %>
       <%= yield %>
