--- a/fixtures/custom-article-template-app/source/layout.erb
+++ b/fixtures/custom-article-template-app/source/layout.erb
@@ -3,18 +3,19 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv='X-UA-Compatible' content='IE=edge;chrome=1' />
-    
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
     <% if is_blog_article? %>
       <title><%= current_article.title %></title>
     <% end %>
   </head>
   <body>
-    
+
     <div id="main" role="main">
       <% if is_blog_article? %>
         <article class="hentry">
           <h1 class="entry-title">
-            <%= current_article.title %> 
+            <%= current_article.title %>
             <time class="updated"><%= current_article.date.strftime('%b %e %Y') %></time>
           </h1>
 
