Add next_local_article and previous_local_article
It's useful when paginating localized blogs

--- a/fixtures/language-app/source/2013-09-09-next-english-article.html.erb
+++ b/fixtures/language-app/source/2013-09-09-next-english-article.html.erb
@@ -1,6 +1,6 @@
 ---
-title: "English article with lang in frontmatter"
-date: 2013-09-07
+title: "Next english article"
+date: 2013-09-09
 lang: en
 ---
 
