--- a/fixtures/language-app/source/2013-09-05-previous-english-article.html.erb
+++ b/fixtures/language-app/source/2013-09-05-previous-english-article.html.erb
@@ -1,6 +1,6 @@
 ---
-title: "English article with lang in frontmatter"
-date: 2013-09-07
+title: "Previous english article"
+date: 2013-09-05
 lang: en
 ---
 
