--- a/fixtures/blog-sources-subdirs-app/source/blog.html.erb
+++ b/fixtures/blog-sources-subdirs-app/source/blog.html.erb
@@ -1,3 +1,6 @@
-<% page_articles.each do |post| %>
-  <li><%= link_to post.title, post %></li>
+
+<% page_articles.each do | post | %>
+
+    <li><%= post.title %></li>
+
 <% end %>
