--- a/fixtures/language-app/source/2013-09-07-english-article-with-lang-in-frontmatter.html.erb
+++ b/fixtures/language-app/source/2013-09-07-english-article-with-lang-in-frontmatter.html.erb
@@ -1,6 +1,9 @@
 ---
-title: "English article with lang in frontmatter"
-lang: en
+
+title : "English article with lang in frontmatter"
+date  : 2013-09-07
+lang  : en
+
 ---
 
 <p>Some text in English. All is <%= t :ok %>.</p>
