--- a/fixtures/language-app/source/2013-09-07-russian-article-with-lang-in-frontmatter.html.erb
+++ b/fixtures/language-app/source/2013-09-07-russian-article-with-lang-in-frontmatter.html.erb
@@ -1,6 +1,9 @@
 ---
-title: "Русская статья с меткой языка во вступлении"
-lang: ru
+
+title : "Русская статья с меткой языка во вступлении"
+date  : 2013-09-07
+lang  : ru
+
 ---
 
 <p>Некоторый текст на русском языке. Всё <%= t :ok %>.</p>
