Added tags and content to the article command line

--- a/lib/middleman-blog/commands/article.tt
+++ b/lib/middleman-blog/commands/article.tt
@@ -1,7 +1,9 @@
 ---
 
-title : <%= @title %>
-date  : <%= @date.strftime('%F %R %Z') %>
-tags  :
+title: <%= @title %>
+date: <%= @date.strftime('%F %R %Z') %>
+tags: <%= @tags.join(",") %>
 
 ---
+
+<%= @content %>
