use %z instead of %Z
see #212 and ab91e6d

--- a/lib/middleman-blog/commands/article.tt
+++ b/lib/middleman-blog/commands/article.tt
@@ -1,7 +1,7 @@
 ---
 
 title: <%= @title %>
-date: <%= @date.strftime('%F %R %Z') %>
+date: <%= @date.strftime('%F %R %z') %>
 tags: <%= @tags.join(",") %>
 
 ---
