--- a/fixtures/language-app/source/localizable/index.html.erb
+++ b/fixtures/language-app/source/localizable/index.html.erb
@@ -1,4 +1,4 @@
-<% blog.local_articles.each do | article | %>
+<% blog.articles_by_locale.each do | article | %>
 
   <article>
     <%= article.body %>
