--- a/fixtures/calendar-app/source/layout.erb
+++ b/fixtures/calendar-app/source/layout.erb
@@ -8,8 +8,8 @@
 
             <%= yield %>
             Url: <%= current_article.url %>
-            Previous: <%= current_article.previous_article.try( :url ) %>
-            Next: <%= current_article.next_article.try( :url ) %>
+            Previous: <%= current_article.article_previous.try( :url ) %>
+            Next: <%= current_article.article_next.try( :url ) %>
 
         <% else %>
             <%= yield %>
